--- a/css/style.css
+++ b/css/style.css
@@ -9893,3 +9893,9 @@ textarea.form-control {
             grid-template-columns: 1fr;
           }
         }
+
+
+                html,
+                body {
+                  overflow-x: hidden;
+                }
